# ecgtranscnn

./: .gitignore  README.md  pyproject.toml  requirements.txt  slides.md
data/demo/: manifest.json
docs/: project-summary.md
ecg_transcovnet/: __init__.py  constants.py  data.py  mews.py  model.py  plots.py  preprocessing.py  report.py  training.py  visualization.py
ecg_transcovnet/simulator/: __init__.py  conditions.py  ecg_simulator.py  hdf5_writer.py  morphology.py  noise.py
models/: README.md
notebooks/: ecg_transcovnet_notebook.py
openspec/: config.yaml  project.md
openspec/changes/add-ecg-preprocessing/: design.md  proposal.md  tasks.md
openspec/changes/add-ecg-preprocessing/specs/data-pipeline/: spec.md
openspec/changes/add-ecg-preprocessing/specs/inference-pipeline/: spec.md
openspec/changes/document-baseline-specs/: design.md  proposal.md  tasks.md
openspec/changes/document-baseline-specs/specs/data-pipeline/: spec.md
openspec/changes/document-baseline-specs/specs/ecg-simulator/: spec.md
openspec/changes/document-baseline-specs/specs/inference-pipeline/: spec.md
openspec/changes/document-baseline-specs/specs/model-architecture/: spec.md
openspec/changes/document-baseline-specs/specs/trained-models/: spec.md
scripts/: evaluate.py  generate_demo.py  generate_hdf5.py  generate_inference_data.py  generate_test_data.py  generate_validation_suite.py  processor.py  run_validation_suite.py  train.py  visualize.py  visualize_hdf5.py
tests/: test_e2e.py  test_model.py  test_noise_robustness.py  test_preprocessing.py  test_simulator.py
